--- a/WebContent/WEB-INF/templates/index.html
+++ b/WebContent/WEB-INF/templates/index.html
@@ -24,9 +24,9 @@
 	</header>
 	<!--Main layout-->
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
-		<div class="card mb-4 wow fadeIn">
-			<div class="card-body d-sm-flex justify-content-between">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
+		<div class="card mb-4 wow fadeIn p-5">
+			
 				<div class="col-md-12 mb-6">
 
 
@@ -44,7 +44,7 @@
 						adoptieren! Viel Spaß auf der Website!</p>
 
 				</div>
-			</div>
+			
 			<hr>
 
 
