--- a/WebContent/WEB-INF/templates/user/profile.html
+++ b/WebContent/WEB-INF/templates/user/profile.html
@@ -26,7 +26,7 @@
 	<!--Main layout-->
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 			<div>
 				<!--  Error message ----------------------------------------------------------- -->
@@ -73,7 +73,7 @@
 					</div>
 					<div class="col-8">
 						<table class="table table-user-information">
-							<h3 class="font-weight-bold" th:text="${user.userName}">Name</h3>
+							<h1 th:text="${user.userName}">Name</h1>
 							<br>
 							<tbody>
 								<tr>
