--- a/WebContent/WEB-INF/templates/walkie/adoption.html
+++ b/WebContent/WEB-INF/templates/walkie/adoption.html
@@ -27,7 +27,7 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 			<div>
 				<!--  Error message ----------------------------------------------------------- -->
@@ -48,8 +48,8 @@
 			</div>
 
 			<div class="row">
-				<div class="col-md-12">
-					<h1 class="font-weight-bold">Übersicht der Adoptionen</h1>
+				<div class="col-md-12 mb-6">
+					<h1>Übersicht der Adoptionen</h1>
 				</div>
 			</div>
 			<br />
