--- a/WebContent/WEB-INF/templates/about.html
+++ b/WebContent/WEB-INF/templates/about.html
@@ -26,9 +26,9 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
-			<div class="row col-md-12 center-block py-3">
+			<div class="row col-md-12 center-block">
 
 				<div class="row">
 					<div class="col-md-12 mb-6">
