--- a/WebContent/WEB-INF/templates/animal/edit.html
+++ b/WebContent/WEB-INF/templates/animal/edit.html
@@ -25,7 +25,7 @@
 	<!--Main layout-->
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div class="row">
@@ -37,7 +37,7 @@
 								th:value="${_csrf.token}" />
 							<legend class="mb-5"
 								th:text="${animal}? 'Tier-Profil ändern' : 'Neues Tier anlegen'">
-								Neues Tier anlegen </legend>
+								<h1>Neues Tier anlegen</h1> </legend>
 				</div>
 			</div>
 
@@ -117,9 +117,14 @@
 						<label for="inputDescription" class="col-md-6 control-label">
 							Beschreibung </label>
 						<div class="col-md-10">
-							<input class="form-control" id="inputDescription" type="text"
+							<textarea class="form-control" id="inputDescription" rows="3" name="description" th:value="${animal} ? ${animal.description}" required="required" ></textarea>
+							
+						<!-- 	ORIGINAL TEXTFIELD:	<input class="form-control" id="inputDescription" type="text"
 								name="description" th:value="${animal} ? ${animal.description}"
 								required="required">
+								
+								 -->
+
 						</div>
 					</div>
 
