--- a/WebContent/WEB-INF/templates/animal/images.html
+++ b/WebContent/WEB-INF/templates/animal/images.html
@@ -26,7 +26,7 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div>
