--- a/WebContent/WEB-INF/templates/animal/petbook.html
+++ b/WebContent/WEB-INF/templates/animal/petbook.html
@@ -27,7 +27,7 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div>
@@ -48,10 +48,10 @@
 				<!--   message ----------------------------------------------------------- -->
 			</div>
 
-			<div class="row col-md-12 center-block py-3">
+			<div class="row col-md-12 center-block">
 				<div class="row">
 					<div class="col-md-6">
-						<h1 class="font-weight-bold">Petbook</h1>
+						<h1>Petbook</h1>
 						<a th:href="@{/animal/add}" class="btn-sm btn-warning mb-2" sec:authorize="hasRole('EMPLOYEE')"><I
 							class="fa fa-plus-square mr-2"></i>Tier hinzufügen</a>
 					</div>
