--- a/WebContent/WEB-INF/templates/user/edit.html
+++ b/WebContent/WEB-INF/templates/user/edit.html
@@ -24,7 +24,7 @@
 	<!--Main layout-->
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div class="row">
@@ -32,7 +32,7 @@
 					<form class="form-horizontal" method="post"
 						th:action="@{/user/edit}">
 						<fieldset>
-							<legend class="mb-5">Profil bearbeiten</legend>
+							<legend class="mb-5"><h1>Profil bearbeiten</h1></legend>
 							<input type="hidden" th:name="${_csrf.parameterName}"
 								th:value="${_csrf.token}" />
 				</div>
