--- a/WebContent/WEB-INF/templates/user/favourites.html
+++ b/WebContent/WEB-INF/templates/user/favourites.html
@@ -26,7 +26,7 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div>
@@ -47,10 +47,10 @@
 				<!--   message ----------------------------------------------------------- -->
 			</div>
 
-			<div class="row col-md-12 center-block py-3">
+			<div class="row col-md-12 center-block">
 				<div class="row">
-					<div class="col-md-6">
-						<h3 class="font-weight-bold">Favoriten</h3>
+					<div class="col-md-6 mb-6">
+						<h1>Favoriten</h1>
 					</div>
 				</div>
 			</div>
