--- a/WebContent/WEB-INF/templates/user/list.html
+++ b/WebContent/WEB-INF/templates/user/list.html
@@ -28,7 +28,7 @@
 
 
 	<main class="pt-2 mx-lg-5">
-	<div class="container-fluid mt-5">
+	<div class="container-fluid mt-5" style="padding-bottom: 7%">
 		<div class="card mb-4 wow fadeIn p-5">
 
 			<div>
@@ -51,7 +51,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h1 class="font-weight-bold" th:text="'Übersicht der ' + ${actual}">Übersicht</h1>
+					<h1 th:text="'Übersicht der ' + ${actual}">Übersicht</h1>
 				</div>
 			</div>
 			<br />
