--- a/WebContent/WEB-INF/templates/walkie/calendar.html
+++ b/WebContent/WEB-INF/templates/walkie/calendar.html
@@ -67,8 +67,7 @@
 </script>
 <style>
 body {
-	font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
-	font-size: 14px;
+	
 }
 
 #calendar {
@@ -111,7 +110,7 @@ body {
 					class="alert alert-success" role="warning"></div>
 				<!--   message ----------------------------------------------------------- -->
 			</div>
-			<div class="row col-md-12 center-block py-3">
+			<div class="row col-md-12 center-block">
 
 				<div class="row">
 					<div class="col-md-12 mb-6">
@@ -130,7 +129,12 @@ body {
 						<div id='calendar'></div>
 
 					</div>
-					<br />
-					<div id='calendar'></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	</main>
+	<br />
+	<div id='calendar'></div>
 </body>
 </html>
